--- a/main/web/assets/style/colorMode.css
+++ b/main/web/assets/style/colorMode.css
@@ -37,7 +37,7 @@
 
 .switch-inp:checked ~ .switch-btn label {
     transform: translateX(calc(100px - 30px));
-    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
 .switch-inp:checked ~ .switch-btn label .icons {
