--- a/main/web/public/about/member/index.gohtml
+++ b/main/web/public/about/member/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Members{{end}}
+{{define "metaDescription"}}Explore the vibrant community of Weebs Kingdom! Discover the top-ranking members, view their achievements, and immerse yourself in the latest art contest images. Join us now and be part of the excitement! 🏆🎨{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
