--- a/main/web/public/about/partner/index.gohtml
+++ b/main/web/public/about/partner/index.gohtml
@@ -1,10 +1,90 @@
 {{define "title"}}Partners{{end}}
+{{define "metaDescription"}}Get to know the amazing partners of Weebs Kingdom and explore their exciting collaborations. Discover their unique projects and find out how they contribute to our vibrant community. Join us and embark on extraordinary adventures together! 🤝✨{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
     {{template "navbar" .}}
+    <div class="container py-3">
+        <h1 class="text-body-emphasis text-center">Our Partners</h1>
+        <div class="row justify-content-center mt-5">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 text-center">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center gap-3">
+                            <img src="https://cdn.discordapp.com/icons/1110291149018648698/e67aac313fb1f93393d7ca769fa7f139.png"
+                                 class="rounded-circle" alt="Partner Image">
+                            <h5 class="text-body-emphasis">Streamer Crew</h5>
+                        </div>
+                        <h4 class="mt-3">👥 Meet the Crew</h4>
+                        <p>The Streamer Crew consists of three talented individuals who share a passion for streaming
+                            and entertaining.</p>
 
-    {{template "underConstruction"}}
+                        <h4>🤣 Fun and Memorable Streams</h4>
+                        <p>Join the Streamer Crew for streams filled with laughter, excitement, and a sense of
+                            community.</p>
+
+                        <h4>📺 Yuki Sora for Twitch</h4>
+                        <p>Enhancing their streams with Yuki Sora, the Streamer Crew utilizes Twitch alerts, role
+                            assignment, and moderation options.</p>
+
+                        <h4>🔥 Epic Collaborations</h4>
+                        <p>The Streamer Crew loves to collaborate on epic gaming adventures and entertaining talk
+                            shows.</p>
+
+                        <h4>💻 Join the Fun</h4>
+                        <p>Tune in to the Streamer Crew's streams and be part of the excitement! Join a welcoming
+                            community of enthusiastic viewers.</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 text-center">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center gap-3">
+                            <img src="https://cdn.discordapp.com/icons/849380782828552202/91b82bbdd72a435a0fe2fd47324aa947.png"
+                                 class="rounded-circle" alt="Partner Image">
+                            <h5 class="text-body-emphasis">🌸seris little children🌸</h5>
+                        </div>
+                        <h4 class="mt-3">🌸 Seris Little Children:</h4>
+                        <p>Discover Seris, an incredibly talented Valorant player and rising star in competitive gaming.
+                            With exceptional skills and dedication, she mesmerizes viewers with her gameplay.</p>
+                        <h4>🎮 Thrilling Streams and Engaging Community</h4>
+                        <p>Join Seris on her exciting gaming streams, where she dominates the battlefield with precision
+                            and finesse. Witness intense Valorant matches and other ego shooters.</p>
+                        <h4>💬 Yuki Sora for Twitchy</h4>
+                        <p>Yuki Sora's Twitch alerts and role assignment enhance the guild experience and the moderation
+                            features always help the moderators to keep the server alive.</p>
+                        <h4>👥 Join the Community</h4>
+                        <p>Be part of Seris Little Children's supportive and enthusiastic community, witness her
+                            incredible gameplay, and cheer her on to victory!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 text-center">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center gap-3">
+                            <img src="https://cdn.discordapp.com/icons/517418309231181824/f454fb61192efc9c8b9b826e356f6eed.png"
+                                 class="rounded-circle" alt="Partner Image">
+                            <h5 class="text-body-emphasis">𝒞𝒽𝑒𝓇𝓇𝓎𝐵𝓁𝑜𝓈𝓈𝑜𝓂</h5>
+                        </div>
+                        <h4 class="mt-3">𝒞𝒽𝑒𝓇𝓇𝓎𝐵𝓁𝑜𝓈𝓈𝑜𝓂:</h4>
+                        <p>Meet 𝒞𝒽𝑒𝓇𝓇𝓎𝐵𝓁𝑜𝓈𝓈𝑜𝓂, a dear friend who knows how to create a fun and vibrant server
+                            environment. With Yuki by his side, he effortlessly moderates his server and brings music to
+                            life.</p>
+                        <h4>🎶 Music Bots and Server Moderation</h4>
+                        <p>𝒞𝒽𝑒𝓇𝓇𝓎𝐵𝓁𝑜𝓈𝓈𝑜𝓂 utilizes Yuki's music bots to enhance the server atmosphere with rhythm and
+                            melody. Additionally, Yuki's moderation features help maintain a positive and enjoyable
+                            community.</p>
+                        <h4>🤝 Join the Community</h4>
+                        <p>Join 𝒞𝒽𝑒𝓇𝓇𝓎𝐵𝓁𝑜𝓈𝓈𝑜𝓂's server and be part of an inclusive and lively community. Enjoy the
+                            music, engage in discussions, and experience the warmth of a welcoming server.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     {{template "footer"}}
     {{template "botdoc"}}
