--- a/main/web/public/about/streamer/index.gohtml
+++ b/main/web/public/about/streamer/index.gohtml
@@ -1,4 +1,5 @@
-{{define "title"}}Streamer{{end}}
+{{define "title"}}Streamers{{end}}
+{{define "metaDescription"}}Discover a diverse lineup of talented streamers in the Weebs Kingdom stream listener. Explore their captivating content and find your new favorite streamer. From gaming to creative endeavors, there's something for everyone. Join the excitement and embark on unforgettable streaming adventures! 🎮📺{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
