--- a/main/web/public/about/support/index.gohtml
+++ b/main/web/public/about/support/index.gohtml
@@ -1,4 +1,5 @@
-{{define "title"}}Supporter{{end}}
+{{define "title"}}Supporters{{end}}
+{{define "metaDescription"}}Discover the amazing individuals who support Weebs Kingdom in various ways. From dedicated boosters and generous donors to special contributors who have made a significant impact, our supporters play a vital role in the growth and success of our community. Join us in expressing gratitude and appreciation for their invaluable support! 🙌❤️{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
