--- a/main/web/public/about/us/index.gohtml
+++ b/main/web/public/about/us/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}About Us{{end}}
+{{define "metaDescription"}}Discover the passionate team behind Weebs Kingdom. Get to know the talented individuals who drive our mission and embody our core values. Learn more about what motivates us and how we strive to create a vibrant and inclusive community. Join us on our journey as we continue to innovate, collaborate, and make a positive impact! 🌟🤝{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
@@ -41,7 +42,8 @@
                         connections with anime, manga, and gaming enthusiasts worldwide.
                     </li>
                     <li class="list-group-item d-flex align-items-center gap-2">
-                        <span class="material-icons">calendar_month</span> To create engaging events that foster camaraderie,
+                        <span class="material-icons">calendar_month</span> To create engaging events that foster
+                        camaraderie,
                         collaboration, and fun among our community members.
                     </li>
                     <li class="list-group-item d-flex align-items-center gap-2">
@@ -69,7 +71,9 @@
                     <h1 class="fw-bold text-body-emphasis">Weebs Kingdom</h1>
                     <p class="fs-1 ms-3">👑</p>
                 </div>
-                <p class="text-body-secondary">Uniting anime, manga, gaming enthusiasts and more, Weebs Kingdom is a thriving hub that ignites passion for Japanese culture. Here's a glimpse into the facets that make up the Weebs Kingdom:</p>
+                <p class="text-body-secondary">Uniting anime, manga, gaming enthusiasts and more, Weebs Kingdom is a
+                    thriving hub that ignites passion for Japanese culture. Here's a glimpse into the facets that make
+                    up the Weebs Kingdom:</p>
                 <ul class="list-unstyled">
                     <li class="d-flex align-items-center">
                         <span class="material-icons me-2 text-primary">diversity_1</span>
@@ -99,7 +103,9 @@
                     <h1 class="fw-bold text-body-emphasis">Yuki Sora</h1>
                     <p class="fs-1 ms-3">👑</p>
                 </div>
-                <p class="text-body-secondary">As an evolved Discord bot, Yuki Sora is crafted to elevate server experiences, offering server admins and members an assortment of features and utilities. Here's a snapshot of what Yuki Sora brings to the table:</p>
+                <p class="text-body-secondary">As an evolved Discord bot, Yuki Sora is crafted to elevate server
+                    experiences, offering server admins and members an assortment of features and utilities. Here's a
+                    snapshot of what Yuki Sora brings to the table:</p>
                 <ul class="list-unstyled">
                     <li class="d-flex align-items-center">
                         <span class="material-icons me-2 text-primary">music_note</span>
