--- a/main/web/public/change/index.gohtml
+++ b/main/web/public/change/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Change Log{{end}}
+{{define "metaDescription"}}Stay up-to-date with the latest changes and updates to the Weebs Kingdom website, Yuki Sora Discord Bot, and our API. Explore the detailed change logs to see what enhancements, improvements, and new features have been implemented. Be in the know about the continuous evolution of our platforms and experience the latest innovations firsthand. 🔄📝{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
