--- a/main/web/public/connect/discord/index.gohtml
+++ b/main/web/public/connect/discord/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Discord{{end}}
+{{define "metaDescription"}}Connect your profile to Discord and unlock a whole new level of engagement and interaction with the Weebs Kingdom community. Link your Discord account to access exclusive features, join guilds, participate in events, and connect with like-minded individuals. Stay connected and never miss out on the exciting conversations happening on Discord. 🔗💬{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
