--- a/main/web/public/connect/index.gohtml
+++ b/main/web/public/connect/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Connect{{end}}
+{{define "metaDescription"}}Discover the benefits of connecting your profile to Discord and unlock a world of possibilities. By linking your Discord account, you gain access to enhanced features, seamless communication, and a vibrant community. Join us on Discord and experience a new level of engagement, collaboration, and fun. Connect now and be part of the Weebs Kingdom experience. 🔗🌐{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
