--- a/main/web/public/faq/index.gohtml
+++ b/main/web/public/faq/index.gohtml
@@ -1,10 +1,188 @@
 {{define "title"}}FAQ{{end}}
+{{define "metaDescription"}}Got questions about the Weebs Kingdom Community? Find answers to frequently asked questions here and get more insights into our community, services, and features. 🤔💡{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
     {{template "navbar" .}}
 
-    {{template "underConstruction"}}
+    <div class="container py-5">
+        <h1 class="text-body-emphasis text-center mb-4">Frequently Asked Questions</h1>
+
+
+        <div class="accordion" id="faqAccordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        Question 1: Why is it called Weebs Kingdom?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 1: Weebs Kingdom is a term that represents our diverse community of individuals who share
+                        a common interest in anime, manga, and Japanese culture. While the term "weebs" might be
+                        associated with passionate anime fans, our community welcomes people from all backgrounds and
+                        interests.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Question 2: Is Weebs Kingdom only for weebs?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 2: No, Weebs Kingdom is not exclusively for "weebs." Our community welcomes individuals
+                        from all walks of life who have an interest in anime, manga, gaming, or simply want to connect
+                        with like-minded individuals. We believe in inclusivity and fostering a diverse community.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Question 3: Can anyone use the Yuki Sora bot?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 3: Absolutely! The Yuki Sora bot is available for anyone to use on their Discord server.
+                        Whether you are a small community or a large guild, you can benefit from the features and
+                        functionalities offered by Yuki Sora. If you are interested in using the bot and exploring
+                        partnership opportunities, you can find more information on our <a
+                                href="/partner">Partnership</a> page.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Question 4: How can I become a partner with Weebs Kingdom?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 4: Becoming a partner with Weebs Kingdom is a great way to collaborate and grow together.
+                        To explore partnership opportunities, please visit our <a href="/partner">Partnership</a> page
+                        and fill out the partnership form. We will review your application and get in touch with you to
+                        discuss further details.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFive">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        Question 5: How is data stored and used at Weebs Kingdom?
+                    </button>
+                </h2>
+                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 5: We take privacy and data protection seriously at Weebs Kingdom. All user data is
+                        handled in accordance with our <a href="/privacy-policy">Privacy Policy</a>. We only collect and
+                        store data that is necessary for the functioning of our services and community engagement. Rest
+                        assured that your data is treated securely and with utmost care.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingSix">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                        Question 6: Do I need an account at Weebs Kingdom?
+                    </button>
+                </h2>
+                <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 6: While you can explore and engage with various features of Weebs Kingdom without an
+                        account, having an account offers additional benefits. With an account, you can access exclusive
+                        content, participate in discussions, and enjoy personalized experiences. Creating an account is
+                        quick, easy, and free! Sign up now to unlock the full potential of Weebs Kingdom. <a
+                                href="/register">Sign up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingSeven">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                        Question 7: Is all the system open source at Weebs Kingdom?
+                    </button>
+                </h2>
+                <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 7: Yes, we believe in the power of open source and the benefits it brings to the
+                        community. At Weebs Kingdom, we are committed to open source development. Our systems and
+                        projects are open source, allowing developers to contribute, learn, and collaborate. Visit our
+                        <a href="/opensource">Open Source</a> page to explore our projects and get involved!
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingEight">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                        Question 8: How do I invite my friends to join Weebs Kingdom?
+                    </button>
+                </h2>
+                <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 8: Inviting your friends to join Weebs Kingdom is simple and easy. You can generate an
+                        invitation link in the guild and share it with your friends. When they click on the link, they
+                        will join Weebs Kingdom.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingNine">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                        Question 9: Are there any community events or activities?
+                    </button>
+                </h2>
+                <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 9: Absolutely! We organize various community events and activities to foster engagement
+                        and interaction among our members. These can include contests, game nights, watch parties,
+                        discussions, and more. Stay tuned to our announcements, guilds, and community channels to
+                        participate in these exciting events.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTen">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+                        Question 10: How can I contribute to the Weebs Kingdom community?
+                    </button>
+                </h2>
+                <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen"
+                     data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Answer 10: We welcome contributions from our community members! You can contribute in various
+                        ways, such as suggesting new features, reporting bugs, providing feedback, participating in
+                        discussions, and even contributing to open source projects. Your active participation helps us
+                        shape and improve the Weebs Kingdom experience for everyone.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     {{template "footer"}}
     {{template "botdoc"}}
