--- a/main/web/public/logout/index.gohtml
+++ b/main/web/public/logout/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Logout{{end}}
+{{define "metaDescription"}}Safely log out of your Weebs Kingdom account. End your session and ensure the security of your account. Log out now and come back whenever you're ready! 👋🔒{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
