--- a/main/web/public/partner/index.gohtml
+++ b/main/web/public/partner/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Partner{{end}}
+{{define "metaDescription"}}Join our partnership program and unlock the benefits of using our powerful Discord bot for your community. Discover how partnering with Weebs Kingdom can enhance your server and create a thriving community. 🤝🤖{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
@@ -14,7 +15,9 @@
         <div class="row py-5 gap-3">
             <div class="col d-flex flex-column align-items-start gap-2 p-3 rounded-4">
                 <h2 class="fw-bold text-body-emphasis">Join Our Ethical Partnership Programm</h2>
-                <p class="text-body-secondary">Partnering with us means gaining access to our powerful Discord bot and its exciting features. We believe in building a community based on trust and collaboration, and we invite you to be a part of our journey.</p>
+                <p class="text-body-secondary">Partnering with us means gaining access to our powerful Discord bot and
+                    its exciting features. We believe in building a community based on trust and collaboration, and we
+                    invite you to be a part of our journey.</p>
                 <div class="mt-3 w-100 text-center">
                     <a href="/contact" class="btn btn-primary btn-lg mb-5">Contact Us</a>
                 </div>
@@ -30,7 +33,9 @@
                                 </div>
                                 <h4 class="fw-semibold mb-0 text-body-emphasis">Engage Your Community</h4>
                             </div>
-                            <p class="text-body-secondary">Boost interaction and engagement within your community using our feature-rich Discord bot. Use our moderation, event planning and admin tools and more.</p>
+                            <p class="text-body-secondary">Boost interaction and engagement within your community using
+                                our feature-rich Discord bot. Use our moderation, event planning and admin tools and
+                                more.</p>
                         </div>
 
                         <div class="bg-body-tertiary p-3 rounded-4 col d-flex flex-column gap-2">
@@ -40,7 +45,9 @@
                                 </div>
                                 <h4 class="fw-semibold mb-0 text-body-emphasis">Partner Privileges</h4>
                             </div>
-                            <p class="text-body-secondary">Your input matters! As a partner, your feature requests take priority, ensuring a tailored experience. Enjoy early access to updates, priority support, and customization options to shape the bot to fit your community's needs.</p>
+                            <p class="text-body-secondary">Your input matters! As a partner, your feature requests take
+                                priority, ensuring a tailored experience. Enjoy early access to updates, priority
+                                support, and customization options to shape the bot to fit your community's needs.</p>
                         </div>
                     </div>
                     <div class="row gap-3">
@@ -51,7 +58,9 @@
                                 </div>
                                 <h4 class="fw-semibold mb-0 text-body-emphasis">Trusted Partnership</h4>
                             </div>
-                            <p class="text-body-secondary">We value trust and integrity. By becoming our partner, you join a community built on ethical collaboration and mutual growth. We are here to support you every step of the way.</p>
+                            <p class="text-body-secondary">We value trust and integrity. By becoming our partner, you
+                                join a community built on ethical collaboration and mutual growth. We are here to
+                                support you every step of the way.</p>
                         </div>
 
                         <div class="bg-body-tertiary p-3 rounded-4 col d-flex flex-column gap-2">
@@ -61,7 +70,9 @@
                                 </div>
                                 <h4 class="fw-semibold mb-0 text-body-emphasis">Expand Your Reach</h4>
                             </div>
-                            <p class="text-body-secondary">Join our growing community and expand your reach to a wider audience. Collaborate with like-minded individuals, share knowledge, and create new opportunities.</p>
+                            <p class="text-body-secondary">Join our growing community and expand your reach to a wider
+                                audience. Collaborate with like-minded individuals, share knowledge, and create new
+                                opportunities.</p>
                         </div>
                     </div>
                 </div>
