--- a/main/web/templates/modals.gohtml
+++ b/main/web/templates/modals.gohtml
@@ -15,9 +15,12 @@
                     <p>This means your missing out on our <b>greatest features!</b></p>
                     <p>Every new connected member gets <b>1000 weaboos</b> as a bonus!</p>
                 </div>
-                <div style="width: fit-content" class="modal-footer flex-column justify-content-center w-100 gap-2 pb-3 border-top-0">
-                    <a style="width: fit-content" type="button" class="btn btn-lg btn-secondary" href="/connect">Show me first</a>
-                    <a style="width: fit-content" type="button" class="btn btn-lg btn-primary" href="/connect/discord">Lets connect!</a>
+                <div style="width: fit-content"
+                     class="modal-footer flex-column justify-content-center w-100 gap-2 pb-3 border-top-0">
+                    <a style="width: fit-content" type="button" class="btn btn-lg btn-secondary" href="/connect">Show me
+                        first</a>
+                    <a style="width: fit-content" type="button" class="btn btn-lg btn-primary" href="/connect/discord">Lets
+                        connect!</a>
                 </div>
             </div>
         </div>
