--- a/main/web/public/register/index.gohtml
+++ b/main/web/public/register/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Register{{end}}
+{{define "metaDescription"}}Join the Weebs Kingdom community by registering an account. Unlock a world of exciting features and exclusive benefits that enhance your experience. 🌟🔓{{end}}
 {{define "featureDisabledDescription"}}Login and Registation{{end}}
 {{define "content"}}
     {{template "topdoc"}}
@@ -10,16 +11,19 @@
         {{template "featureDisabled"}}
         <div id="register" class="container">
             <div class="form-floating mb-3">
-                <input v-model="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com" aria-describedby="emailHelp">
+                <input v-model="email" type="email" class="form-control" id="floatingInput"
+                       placeholder="name@example.com" aria-describedby="emailHelp">
                 <label for="floatingInput">Email address</label>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3 form-floating">
-                <input v-model="password1" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input v-model="password1" type="password" class="form-control" id="floatingPassword"
+                       placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="mb-3 form-floating">
-                <input v-model="password2" type="password" class="form-control" id="floatingPassword1" placeholder="Repeat Password">
+                <input v-model="password2" type="password" class="form-control" id="floatingPassword1"
+                       placeholder="Repeat Password">
                 <label for="floatingPassword1">Password</label>
             </div>
             <div class="mb-3">
