--- a/main/web/public/website-terms/index.gohtml
+++ b/main/web/public/website-terms/index.gohtml
@@ -1,10 +1,44 @@
 {{define "title"}}Weebs Kingdom Terms and Conditions{{end}}
+{{define "metaDescription"}}Read and understand the terms and conditions that govern the use of the Weebs Kingdom website. Stay informed and ensure a safe and enjoyable experience. 📜✅{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
     {{template "navbar" .}}
 
-    {{template "underConstruction"}}
+    {{template "otherConditions"}}
+    <div class="p-5 mb-5">
+        <hr>
+    </div>
+
+    <div class="container">
+        <h1 class="text-center mb-5">Weebs Kindom - Terms and Conditions</h1>
+        Welcome to Weebs Kingdom!
+        <br><br>
+        These terms and conditions outline the rules and regulations for the use of Weebs Kingdom, located at
+        weebskingdom.com.
+        <br><br>
+        By accessing this website we assume you accept these terms and conditions. Do not continue to use Weebs Kingdom if
+        you do not agree to take all of the terms and conditions stated on this page.
+        <br>
+        The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all
+        Agreements: “Client”, “You” and “Your” refers to you, the person log on this website and compliant to the Company's
+        terms and conditions. “The Company”, “Ourselves”, “We”, “Our” and “Us”, refers to our Company. “Party”, “Parties”,
+        or “Us”, refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of
+        payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the
+        express purpose of meeting the Client's needs in respect of provision of the Company's stated services, in
+        accordance with and subject to, prevailing law of Germany. Any use of the above terminology or other words in the
+        singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to
+        same.
+        <br>
+        <h1>Cookies</h1>
+        We employ the use of cookies. By accessing Weebs Kingdom, you agreed to use cookies in agreement with the <a
+                href="/dsgvo">Weebs Kingdom</a> DSGVO (german privacy policy) and the <a href="/privacy">Weebs Kingdom</a>
+        Privacy Policy.
+        <br>
+        Most interactive websites use cookies to let us retrieve the user's details for each visit. Cookies are used by our
+        website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our
+        affiliate/advertising partners may also use cookies.
+    </div>
 
     {{template "footer"}}
     {{template "botdoc"}}
