--- a/main/web/templates/_base.gohtml
+++ b/main/web/templates/_base.gohtml
@@ -1,37 +1,48 @@
 {{define "title"}} Default Title {{end}}
 {{define "metaDescription"}}Default Description{{end}}
+{{define "metaKeywords"}}{{end}}
 
 {{define "topdoc"}}
-    <html lang="de" data-bs-theme="dark">
-    <head>
-        <!-- Meta Tags -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Meta Tags Links preview -->
-        <meta property="og:title" content="{{template "title"}}">
-        <meta property="og:description" content="{{template "metaDescription"}}">
-        <meta name="description" content="{{template "metaDescription"}}">
-        <title>{{template "title"}}</title>
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-              crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-                crossorigin="anonymous"></script>
-        <!-- Google Icons -->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-              rel="stylesheet">
-        <!-- Vue -->
-        <script src="https://cdn.jsdelivr.net/npm/vue@2" crossorigin="anonymous"></script>
-        <!-- App Script -->
-        <script src="/assets/script/baseScripts.js"></script>
-        <!-- App Style -->
-        <link href="/assets/style/colorMode.css" rel="stylesheet">
-        <link href="/assets/style/main.css" rel="stylesheet">
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="dark">
+<head>
+<title>{{template "title"}}</title>
+    <!-- Meta Tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Meta Tags Links preview -->
+    <meta property="og:title" content="{{template "title"}}">
+    <meta property="og:description" content="{{template "metaDescription"}}">
+    <meta name="description" content="{{template "metaDescription"}}">
+    <!-- Copyright -->
+    <meta name="author" content="Noah Elijah Till" />
+    <meta name="copyright" content="Weebs Kingdom" />
+    <!-- Search -->
+    <meta name="robots" content="index,follow" />
+    <meta name="keywords" content="weebs, weebskingdom, weebs kingdom, anime, twitch bot, discord bot, discord, community, {{template "metaKeywords"}}">
+    <!-- Google -->
+    <meta name="googlebot" content="index,follow">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
+    <!-- Google Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <!-- Vue -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2" crossorigin="anonymous"></script>
+    <!-- App Script -->
+    <script src="/assets/script/baseScripts.js"></script>
+    <!-- Weebs Style -->
+    <link href="/assets/style/colorMode.css" rel="stylesheet">
+    <link href="/assets/style/main.css" rel="stylesheet">
+</head>
+<body>
 {{end}}
 
 {{define "topdocsimple"}}
@@ -66,13 +77,16 @@
             document.title = "{{template "title"}} - 👋🏻 We miss you!";
         }
     }
+
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 </script>
 </body>
 </html>
 {{end}}
 
 {{define "botdocsimple"}}
-    </body>
-    </html>
+</body>
+</html>
 {{end}}
 
