--- a/main/web/public/privacy-policy/index.gohtml
+++ b/main/web/public/privacy-policy/index.gohtml
@@ -23,7 +23,8 @@
         More Contact Options: Doktor Wu ノア#9945 (Discord)
 
         <h1>Privacy Policy</h1>
-        Responsible in terms of data protection laws, in particular the EU General Data Protection Regulation (GDPR), is:
+        Responsible in terms of data protection laws, in particular the EU General Data Protection Regulation (GDPR),
+        is:
         <br>
         Noah Till
         Zur Breite 5
@@ -32,7 +33,8 @@
         <br><br>
 
         <h1>Your Rights as a Data Subject</h1>
-        You can exercise the following rights at any time using the contact details provided by our data protection officer:
+        You can exercise the following rights at any time using the contact details provided by our data protection
+        officer:
         <br>
         <ul>
             <li>Information about your data stored by us and their processing (Art. 15 GDPR),</li>
@@ -43,45 +45,52 @@
                 (Art. 18 GDPR),
             </li>
             <li>Objection to the processing of your data by us (Art. 21 GDPR) and</li>
-            <li>Data portability, provided you have consented to data processing or have concluded a contract with us (Art.
+            <li>Data portability, provided you have consented to data processing or have concluded a contract with us
+                (Art.
                 20
                 GDPR).
             </li>
             <li>If you have given us your consent, you can revoke it at any time with future effect.</li>
         </ul>
         <br>
-        You can contact a supervisory authority at any time with a complaint, e.g. to the competent supervisory authority in
+        You can contact a supervisory authority at any time with a complaint, e.g. to the competent supervisory
+        authority in
         the
         state of your place of residence or to the authority responsible for us.
         <br><br>
         <h1>Cookies</h1>
         <h2>Type and Purpose of Processing:</h2>
-        Like many other websites, we also use so-called "cookies". Cookies are small text files that are stored on your end
+        Like many other websites, we also use so-called "cookies". Cookies are small text files that are stored on your
+        end
         device (laptop, tablet, smartphone, etc.) when you visit our website.
         <br>
         This gives us certain data such as IP address, browser used and operating system.
         <br>
-        Cookies cannot be used to start programs or transfer viruses to a computer. Based on the information contained in
+        Cookies cannot be used to start programs or transfer viruses to a computer. Based on the information contained
+        in
         cookies, we can make navigation easier for you and enable our websites to be displayed correctly.
         <br>
         Under no circumstances will the data we collect be passed on to third parties or linked to personal data without
         your
         consent.
         <br>
-        In general, you can deactivate the use of cookies at any time via the settings of your browser. Please use the help
+        In general, you can deactivate the use of cookies at any time via the settings of your browser. Please use the
+        help
         functions of your internet browser to find out how you can change these settings. Please note that individual
         functions
         of our website may not work if you have deactivated the use of cookies.
         <br><br>
         <h2>Storage Period and Cookies Used:</h2>
-        If you allow us to use cookies through your browser settings or consent, the following cookies can be used on our
+        If you allow us to use cookies through your browser settings or consent, the following cookies can be used on
+        our
         websites:
         <br>
         Session cookies and other necessary cookies (maximum storage period of one month)
         <br>
         As far as these cookies can (also) relate to personal data, we will inform you in the following sections.
         <br>
-        You can delete individual cookies or the entire cookie inventory via your browser settings. You will also receive
+        You can delete individual cookies or the entire cookie inventory via your browser settings. You will also
+        receive
         information and instructions on how to delete these cookies or block their storage in advance. Depending on the
         provider
         of your browser, you will find the necessary information under the following links:
@@ -100,18 +109,21 @@
         Our services do not knowingly process data from children (under the age of 13).
         <br><br>
         <h1>SSL Encryption</h1>
-        In order to protect the security of your data during transmission, we use state-of-the-art encryption methods (e.g.
+        In order to protect the security of your data during transmission, we use state-of-the-art encryption methods
+        (e.g.
         SSL)
         via HTTPS.
         <br><br>
         <h1>Changes to Our Privacy Policy</h1>
-        We reserve the right to adapt this data protection declaration so that it always corresponds to the current legal
+        We reserve the right to adapt this data protection declaration so that it always corresponds to the current
+        legal
         requirements or to implement changes to our services in the data protection declaration, for example when
         introducing
         new services. The new data protection declaration then applies to your next visit.
         <br><br>
         <h1>Questions to the Data Protection Officer</h1>
-        If you have any questions about data protection, please send us an email or contact the person responsible for data
+        If you have any questions about data protection, please send us an email or contact the person responsible for
+        data
         protection in our organization directly:
         <br>
         Email: ntill@gmx.de
