--- a/main/web/templates/assets.gohtml
+++ b/main/web/templates/assets.gohtml
@@ -12,42 +12,6 @@
     "
 {{end}}
 
-{{define "footer"}}
-    <footer class="bg-body-tertiary text-light py-5 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h5>Legal</h5>
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3d">
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/bot-terms">Yuki Sora
-                                Terms of Service</a></li>
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/website-terms">Weebs
-                                Kingdom Terms and Conditions</a></li>
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/privacy-policy">Privacy
-                                Policy</a></li>
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/dsgvo">DSGVO</a></li>
-                    </ul>
-                </div>
-                <div class="col-4">
-                    <h5>Useful Links</h5>
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/faq">FAQ</a></li>
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/contact">Contact Us</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="/about/us">About Us</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row mt-4">
-                <div class="col-lg-12 text-center">
-                    <p>&copy; 2023 Weebs Kingdom. All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-{{end}}
-
 {{define "navbar"}}
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded mb-5">
         <div class="container-fluid">
@@ -254,7 +218,8 @@
             <div class="bg-body-secondary rounded-3 shadow p-4 mb-5">
                 <div class="container mb-0">
                     <h3 class="text-center">You're logged in!</h3>
-                    <p class="text-center mb-4">Since your logged in, we don't need any additional information from you!</p>
+                    <p class="text-center mb-4">Since your logged in, we don't need any additional information from
+                        you!</p>
                 </div>
             </div>
         {{end}}
